--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# REACT_APP_API_URL = https://strapi-everyday-webservice.onrender.com/api
-# REACT_APP_UPLOAD_URL = https://strapi-everyday-webservice.onrender.com
-REACT_APP_API_URL = http://localhost:1337/api
-REACT_APP_UPLOAD_URL = http://localhost:1337
+REACT_APP_API_URL = https://strapi-everyday-webservice.onrender.com/api
+REACT_APP_UPLOAD_URL = https://strapi-everyday-webservice.onrender.com
+# REACT_APP_API_URL = http://localhost:1337/api
+# REACT_APP_UPLOAD_URL = http://localhost:1337
